feat(ci): add healthcheck, change versioning logic
