# src/router/docsRouter.ts
@@ -2,21 +2,35 @@ import express, { Router } from "express";
 import path from "path";
 
 import config from "@/config";
-import log from "@/logger";
-import { reqUrl } from "@/utils";
+import { request } from "@/middleware";
 
 const docsRouter: Router = express.Router();
 const docsPaths = {
   docs: path.join(config.API_BASE_PATH, "openapi.json")
 };
 
-/** Static files middleware */
+/**
+ * @openapi
+ * /openapi.json:
+ *   get:
+ *     summary: Serve OpenAPI documentation
+ *     description: Serves the OpenAPI documentation as a JSON file.
+ *     responses:
+ *       '200':
+ *         description: The OpenAPI documentation in JSON format.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               description: The OpenAPI schema document.
+ *       '404':
+ *         description: The documentation file was not found.
+ *       '500':
+ *         description: Internal server error.
+ */
 docsRouter.use(
   docsPaths.docs,
-  (req, _req, next) => {
-    log.info(`Endpoint accesed (${reqUrl(req)})`);
-    next();
-  },
+  request(["GET"]),
   express.static(path.join(config.ROOT_PATH, "docs", "openapi.json"))
 );
 
